--- a/JSON_exercise.ipynb
+++ b/JSON_exercise.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +91,7 @@
        "      <td>N</td>\n",
        "      <td>Education for all</td>\n",
        "      <td>100</td>\n",
-       "      <td>[{'name': 'Education for all', 'code': '65'}]</td>\n",
+       "      <td>[{'code': '65', 'name': 'Education for all'}]</td>\n",
        "      <td>65</td>\n",
        "      <td>130000000</td>\n",
        "      <td>130000000</td>\n",
@@ -114,7 +115,7 @@
        "      <td>N</td>\n",
        "      <td>Other economic management</td>\n",
        "      <td>30</td>\n",
-       "      <td>[{'name': 'Other economic management', 'code':...</td>\n",
+       "      <td>[{'code': '24', 'name': 'Other economic manage...</td>\n",
        "      <td>54,24</td>\n",
        "      <td>0</td>\n",
        "      <td>4700000</td>\n",
@@ -151,8 +152,8 @@
        "1                     N  Other economic management             30   \n",
        "\n",
        "                                      theme_namecode themecode   totalamt  \\\n",
-       "0      [{'name': 'Education for all', 'code': '65'}]        65  130000000   \n",
-       "1  [{'name': 'Other economic management', 'code':...     54,24          0   \n",
+       "0      [{'code': '65', 'name': 'Education for all'}]        65  130000000   \n",
+       "1  [{'code': '24', 'name': 'Other economic manage...     54,24          0   \n",
        "\n",
        "  totalcommamt                                                url  \n",
        "0    130000000  http://www.worldbank.org/projects/P129828/ethi...  \n",
@@ -229,7 +230,7 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>N</td>\n",
-       "      <td>{'Name': 'Education for all', 'Percent': 100}</td>\n",
+       "      <td>{'Percent': 100, 'Name': 'Education for all'}</td>\n",
        "      <td>[{'name': 'Education for all', 'code': '65'}]</td>\n",
        "      <td>65</td>\n",
        "      <td>130000000</td>\n",
@@ -253,7 +254,7 @@
        "      <td>IBRD</td>\n",
        "      <td>Active</td>\n",
        "      <td>N</td>\n",
-       "      <td>{'Name': 'Other economic management', 'Percent...</td>\n",
+       "      <td>{'Percent': 30, 'Name': 'Other economic manage...</td>\n",
        "      <td>[{'name': 'Other economic management', 'code':...</td>\n",
        "      <td>54,24</td>\n",
        "      <td>0</td>\n",
@@ -291,8 +292,8 @@
        "1  Active                     N   \n",
        "\n",
        "                                              theme1  \\\n",
-       "0      {'Name': 'Education for all', 'Percent': 100}   \n",
-       "1  {'Name': 'Other economic management', 'Percent...   \n",
+       "0      {'Percent': 100, 'Name': 'Education for all'}   \n",
+       "1  {'Percent': 30, 'Name': 'Other economic manage...   \n",
        "\n",
        "                                      theme_namecode themecode   totalamt  \\\n",
        "0      [{'name': 'Education for all', 'code': '65'}]        65  130000000   \n",
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -501,15 +502,15 @@
        "Vietnam               17\n",
        "India                 16\n",
        "Yemen, Republic of    13\n",
+       "Nepal                 12\n",
        "Bangladesh            12\n",
        "Morocco               12\n",
-       "Nepal                 12\n",
-       "Africa                11\n",
        "Mozambique            11\n",
+       "Africa                11\n",
        "Name: countryshortname, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -582,7 +583,7 @@
        "4             Lesotho  Second Private Sector Competitiveness and Econ..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -679,7 +680,7 @@
        "Africa                       11"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -838,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -894,7 +895,7 @@
        "4    5                  Trade and integration"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +906,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(themename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "themename.set_index(\"code\", drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "orient 'name' not understood",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-99a11f7ac39b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdictionary\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mthemename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\kashif\\Anaconda3\\lib\\site-packages\\pandas\\util\\decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     89\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m                     \u001b[0mkwargs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnew_arg_name\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_arg_value\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 91\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     92\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0m_deprecate_kwarg\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\kashif\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mto_dict\u001b[1;34m(self, orient)\u001b[0m\n\u001b[0;32m    858\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    859\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 860\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"orient '%s' not understood\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    861\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    862\u001b[0m     def to_gbq(self, destination_table, project_id, chunksize=10000,\n",
+      "\u001b[1;31mValueError\u001b[0m: orient 'name' not understood"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = themename.to_dict(orient=\"name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kashif\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:839: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "  \"columns will be omitted.\", UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'1': [''],\n",
+       " '10': ['Rural development'],\n",
+       " '11': ['Environment and natural resources management'],\n",
+       " '2': ['Public sector governance'],\n",
+       " '3': ['Rule of law'],\n",
+       " '4': ['Financial and private sector development'],\n",
+       " '5': ['Trade and integration'],\n",
+       " '6': [''],\n",
+       " '7': ['Social dev/gender/inclusion'],\n",
+       " '8': ['Human development'],\n",
+       " '9': ['Urban development']}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "themename.set_index('code').T.to_dict('list')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -928,7 +1024,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -961,7 +1057,7 @@
        "Name: code, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -2498,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -4015,7 +4111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -4071,7 +4167,7 @@
        "4    5                  Trade and integration"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4082,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -4302,7 +4398,7 @@
        "1                        "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4332,7 +4428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -4353,7 +4449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -4364,7 +4460,7 @@
        "'[1,2,3]'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4375,7 +4471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -4395,7 +4491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -4406,7 +4502,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
