--- a/JSON_exercise.ipynb
+++ b/JSON_exercise.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -464,7 +464,7 @@
        "Africa                       11"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -602,7 +602,7 @@
        "1                              Economic management     33"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -664,7 +664,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,6 +681,62 @@
     "data = data.drop('name_x', 1)\n",
     "data.columns = ['code', 'name']\n",
     "data.groupby('name').size().sort_values(ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name\n",
+       "Environment and natural resources management    250\n",
+       "Rural development                               216\n",
+       "Human development                               210\n",
+       "Public sector governance                        199\n",
+       "Social protection and risk management           168\n",
+       "Financial and private sector development        146\n",
+       "Social dev/gender/inclusion                     130\n",
+       "Trade and integration                            77\n",
+       "Urban development                                50\n",
+       "Economic management                              38\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alternative\n",
+    "\n",
+    "df = json_normalize(sample_json_s, 'mjtheme_namecode')\n",
+    "df = df.sort_values('code').replace('', np.NaN)\n",
+    "df = df.fillna(method = 'bfill')\n",
+    "df.groupby('name').size().sort_values(ascending = False).head(10)"
    ]
   }
  ],
