--- a/JSON_exercise.ipynb
+++ b/JSON_exercise.ipynb
@@ -499,6 +499,60 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "China                 19\n",
+       "Indonesia             19\n",
+       "Vietnam               17\n",
+       "India                 16\n",
+       "Yemen, Republic of    13\n",
+       "Morocco               12\n",
+       "Nepal                 12\n",
+       "Bangladesh            12\n",
+       "Mozambique            11\n",
+       "Africa                11\n",
+       "Name: countryshortname, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alternative\n",
+    "\n",
+    "df = sample_json_df\n",
+    "df = df[['countryshortname', 'project_name']]\n",
+    "df.countryshortname.value_counts(ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -612,6 +666,60 @@
     "n = json_normalize(sample_json_s, 'mjtheme_namecode')\n",
     "g = n.groupby(['name', 'code'])['code', 'name'].count().sort_values('name', ascending = False).drop('code', 1).rename(columns = {'name':'count'}).reset_index('name')\n",
     "g[g.name != ''].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Environment and natural resources management    223\n",
+       "Rural development                               202\n",
+       "Human development                               197\n",
+       "Public sector governance                        184\n",
+       "Social protection and risk management           158\n",
+       "Financial and private sector development        130\n",
+       "Social dev/gender/inclusion                     119\n",
+       "Trade and integration                            72\n",
+       "Urban development                                47\n",
+       "Economic management                              33\n",
+       "Name: name, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alternative\n",
+    "\n",
+    "df = json_normalize(sample_json_s, 'mjtheme_namecode')\n",
+    "df = df.replace('', np.NaN).dropna()\n",
+    "df.name.value_counts().head(10)"
    ]
   },
   {
